fixed iris button on mobile

--- a/frontend/src/styles/stargate/main.scss
+++ b/frontend/src/styles/stargate/main.scss
@@ -210,7 +210,7 @@
     right: 5%;
     width: 50px;
     height: 70px;
-    background-color: rgb(49, 47, 47);
+    background-color: rgb(41, 38, 38);
     color: grey;
     font-weight: 800;
     border: none;
@@ -277,6 +277,12 @@
     .dhdButton {
       height: 50px;
       width: 50px;
+    }
+
+    .iris {
+      bottom: 8px;
+      right: 4px;
+      height: 10%;
     }
   }
 }
